Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 383
    • Issues 383
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 56
    • Merge requests 56
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #2447
Closed
Open
Issue created Aug 23, 2022 by Matthias Clasen@matthiascDeveloper

"Open in Disks" doesn't work for /

Description of problem: Open in Disks link is not working in root directory properties window.

Version-Release number of selected component (if applicable): F37 pre-release testing

How reproducible: Open nautilus file manager, go to root directory and open properties from contest (right-click) menu. Click on the 'open in disks' link.

Steps to Reproduce: 1. 2. 3.

Actual results: Open in Disks link is not working in root directory properties window. Disks app is not opening.

Expected results: Disks app should open

Additional info:

Reported during the Fedora 37 desktop test week: https://bugzilla.redhat.com/show_bug.cgi?id=2117710

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking